+ translate to english + download all years and logs